Editing Actor titles: form field too far to the left. Fix: Under Windows, using Chrome or standalone, connectors often get misaligned when nodes are moved. Update jsplumb to latest Community Edition. Fix CSS errors in placement of the resize handler. Visual feedback on drop targets when dragging connections between nodes.

--- a/common/css/raster-print.css
+++ b/common/css/raster-print.css
@@ -60,7 +60,7 @@ body {
 }
 
 .connbutton { display: none !important; }
-._jsPlumb_endpoint { visibility: hidden !important; }
+.jtk-endpoint { visibility: hidden !important; }
 
 .sfaccordion { page-break-inside: avoid; }
 /*.shfaccordion { page-break-inside: avoid; }*/
